<resources>
    <string name="app_name">Meanintor - Practice English everyday</string>
    <string name="select_all">Select all</string>
    <string name="true_false">True/False</string>
    <string name="multiple_choice_definition">Multiple Choice (Definition)</string>
    <string name="multiple_choice_word">Multiple Choice (Word)</string>
    <string name="matching">Matching</string>
    <string name="synonyms">Synonyms</string>
    <string name="antonyms">Antonyms</string>
    <string name="writing">Writing</string>
    <string name="writing_listening">Writing (Listening)</string>
    <string name="continue_button_text">Continue</string>
    <string name="set_up_automatically">Set up automatically</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Enter the word</string>
    <string name="search_error">No words were found\nCheck your spelling or</string>
    <string name="deselect">Deselect</string>
    <string-array name="parts_of_speech">
        <item>noun</item>
        <item>verb</item>
        <item>adjective</item>
        <item>phrase</item>
        <item>adverb</item>
        <item>pronoun</item>
        <item>preposition</item>
        <item>conjunction</item>
        <item>interjection</item>
        <item>article</item>
    </string-array>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="import_words_key">import_words</string>
    <string name="export_words_key">export_words</string>
    <string name="export_cards_key">export_cards</string>
    <string name="import_cards_key">import_cards</string>
    <string name="send_notifications_key">send_notifications</string>
    <string name="notifications_time_key">notifications_time</string>
    <string name="clean_unused_words">clean_unused_words</string>
    <string name="app_info">app_info_key</string>
</resources>